test/types/range/hilde/maximalRange.bounds.good
maximalRange.chpl:5: error: halt reached - Iteration over a bounded range may be incorrect due to overflow.
