test/types/range/hilde/maximalRange.compopts
--no-bounds-checks  # maximalRange.no-bounds.good
--bounds-checks     # maximalRange.bounds.good
